--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,46 @@ python = "^3.8"
 requests = "^2.26.0"
 spotipy = "^2.19.0"
 python-dotenv = "^0.19.2"
-flake8 = "^4.0.1"
-black = "^21.12b0"
-isort = "^5.10.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.16.0"
+pytest-cov = "^3.0.0"
+flake8 = "^4.0.1"
+mypy = "^0.910"
+isort = "^5.10.1"
+black = {version = "^21.12b0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+line_length = 90
+
+[tool.black]
+line-length = 90
+target-version = ['py38']
+include = '\.pyi?$'
+exclude = '''
+
+(
+  /(
+      \.eggs         # exclude a few common directories in the
+    | \.git          # root of the project
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | _build
+    | buck-out
+    | build
+    | dist
+  )/
+  | foo.py           # also separately exclude a file named foo.py in
+                     # the root of the project
+)
+'''
