--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,18 @@ description = ""
 authors = ["Matt Andersen <mattandersen0@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-requests = "^2.26.0"
+python = "^3.10"
+requests = "^2.27.1"
 spotipy = "^2.19.0"
-python-dotenv = "^0.19.2"
+python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
-pre-commit = "^2.16.0"
+pre-commit = "^2.18.1"
 pytest-cov = "^3.0.0"
 flake8 = "^4.0.1"
-mypy = "^0.910"
+mypy = "^0.942"
 isort = "^5.10.1"
-black = {version = "^21.12b0", allow-prereleases = true}
+black = "^22.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
