--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -23,6 +23,7 @@ jobs:
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag spotify-playlist-renamer
 
+      # Builds and pushes container image to registry:
       - name: Publish Docker Image to GPR
         uses: machine-learning-apps/gpr-docker-publish@master
         id: docker
@@ -33,3 +34,22 @@ jobs:
           BUILD_CONTEXT: "./"
         env:
           GITHUB_TOKEN: ${{ secrets.GPR_TOKEN }}
+
+  deploy:
+
+    permissions:
+      actions: read
+      contents: read
+      id-token: write
+
+    runs-on: ubuntu-latest
+
+    # Deploys the Helm chart to the cluster:
+    steps:
+    - name: Deploy app to cluster
+      uses: wahyd4/kubectl-helm-action@master
+      env:
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
+      with:
+        args: |
+          helm upgrade --install spotify-playlist-renamer helm
