--- a/helm/templates/cronjob.yaml
+++ b/helm/templates/cronjob.yaml
@@ -11,7 +11,7 @@ spec:
           restartPolicy: OnFailure
           containers:
           - name: spotify-playlist-renamer
-            image: "{{ .Values.image.repository }}/{{ .Values.image.name }}"
+            image: "{{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
             imagePullPolicy: Always
             envFrom:
               - secretRef:
