--- a/helm/templates/cronjob.yaml
+++ b/helm/templates/cronjob.yaml
@@ -11,7 +11,7 @@ spec:
           restartPolicy: OnFailure
           containers:
           - name: spotify-playlist-renamer
-            image: "{{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
+            image: "{{ if eq .Values.environment "prod" }}{{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}{{ else }}localhost:5001/spotify-playlist-renamer{{ end }}"
             imagePullPolicy: Always
             envFrom:
               - secretRef:
