--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -55,4 +55,4 @@ jobs:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
       with:
         args: |
-          helm upgrade --set environment=prod --install spotify-playlist-renamer helm
+          helm upgrade --set environment=prod --install --namespace spotify-playlist-renamer spotify-playlist-renamer helm
