--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -50,7 +50,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Deploy app to cluster
-      uses: wahyd4/kubectl-helm-action@master
+      uses: wahyd4/kubectl-helm-action@v0.1.2
       env:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
       with:
