--- a/helm/templates/cronjob.yaml
+++ b/helm/templates/cronjob.yaml
@@ -4,7 +4,7 @@ metadata:
   name: spotify-playlist-renamer-cronjob
   namespace: spotify-playlist-renamer
 spec:
-  schedule: "0 8 * * *"
+  schedule: "* * * * *"
   jobTemplate:
     spec:
       template:
