Set read-only as false for token file

--- a/helm/templates/cronjob.yaml
+++ b/helm/templates/cronjob.yaml
@@ -33,7 +33,7 @@ spec:
               volumeMounts:
                 - name: token
                   mountPath: /tmp/
-                  readOnly: true
+                  readOnly: false
           volumes:
             - name: token
               secret:
