--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -2,3 +2,7 @@ image:
   repository: ghcr.io/matt-andersen
   name: spotify-playlist-renamer
   tag: latest
+
+cache:
+  file: token.json
+  folder: /tmp/
