--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,9 +1,11 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "debian/buster64"
-  config.vagrant.plugins = ['vagrant-vbguest']
+  config.vagrant.plugins = ["vagrant-vbguest"]
+  config.vm.define "spotify-playlist-renamer"
   config.vm.boot_timeout = 600
 
-  config.vm.synced_folder "./", "/home/vagrant/project"
+  config.vm.synced_folder "../", "/home/vagrant/project"
+  config.vm.synced_folder "~/AppData/Roaming/Lens/kubeconfigs", "/home/vagrant/kubeconfigs"
 
   config.vm.provider "virtualbox" do |vb|
     vb.cpus = 2
@@ -11,7 +13,6 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.provision :docker
-
   config.vm.provision :shell, path: "bootstrap.sh"
 
 end
